<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".fragments.CustomizeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/coronovirus_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/coronavirusemoji" />

        <TextView
            android:id="@+id/customizeTitleInfo"
            android:layout_width="244dp"
            android:layout_height="66dp"
            android:layout_marginStart="161dp"
            android:layout_marginLeft="161dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="162dp"
            android:layout_marginRight="162dp"
            android:contentDescription="@string/customize_page_info"
            android:gravity="center"
            android:text="@string/customize_title_info"
            android:textColor="#34A139"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Spinner
            android:id="@+id/countrySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:popupBackground="#34A139"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countrySpinnerTitle"
            tools:visibility="visible" />


        <Spinner
            android:id="@+id/caseSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:entries="@array/case_values"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:popupBackground="#34A139"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/caseSpinnerTitle" />

        <TextView
            android:id="@+id/countrySpinnerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="146dp"
            android:layout_marginLeft="146dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="147dp"
            android:layout_marginRight="147dp"
            android:text="@string/select_country_spinner_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customizeTitleInfo" />

        <TextView
            android:id="@+id/caseSpinnerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="146dp"
            android:layout_marginLeft="146dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="147dp"
            android:layout_marginRight="147dp"
            android:text="@string/select_case_spinner_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countrySpinner" />

        <Button
            android:id="@+id/goBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="162dp"
            android:layout_marginLeft="162dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="162dp"
            android:layout_marginRight="162dp"
            android:text="@string/go_button_text"
            android:textAllCaps="true"
            android:textColor="#2C7A2F"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/caseSpinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>